# guardette

./: .env.example  .flake8  .gitignore  .pinact.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.awslambda  LICENSE  Makefile  README.md  docker-compose.yml  main.py  poetry.toml  pyproject.toml
.client/adr/: observability-options.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yaml  security.yml
docs/: REDACTION.md  draft-prd.md
scripts/: check_gcal.py  check_github.py  check_gitlab.py  check_jira.py  test_github.py
scripts/policygen/: policygen.config.example.json  policygen.py
scripts/policygen/sources/github/: template.yml
scripts/policygen/sources/gitlab/: template.yml
scripts/policygen/sources/google_workspace_calendar/: template.yml
scripts/policygen/sources/jira/: template.yml
scripts/policygen/sources/jira_basic_auth/: template.yml
scripts/policygen/sources/jira_oauth2/: template.yml
scripts/policygen/sources/test_hacker_news/: template.yml
src/guardette/: __init__.py  actions.py  auth.py  config.py  constants.py  datastructures.py  errors.py  exceptions.py  logging.py  matching.py  policy.py  proxy.py  secrets.py  utils.py  version.py
src/guardette/default_actions/: __init__.py  filter_regex.py  nullify.py  pseudonymize_email.py  redact.py  redact_regex.py  redact_secrets.py  remove.py
src/guardette/default_auth/: __init__.py  basic_auth.py  bearer_token.py  gcp_service_account.py  oauth2_client_credentials.py
src/guardette/observability/: __init__.py  config.py  events.py  headers.py  middleware.py
terraform/aws/: README.md  api_gateway.tf  lambda.tf  main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_actions.py  test_auth.py  test_auth_registry.py  test_check_jira.py  test_config.py  test_matching.py  test_observability.py  test_policy.py  test_policy.yml  test_proxy.py  test_secrets.py  test_utils.py
