[project]
name = "guardette"
version = "0.1.0"
description = "A redacting proxy built on FastAPI/Starlette."
authors = [
    { name = "Span" }
]
license = "MIT"
requires-python = ">=3.13,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "annotated-types>=0.6.0",
    "anyio[trio]>=3.7.1",
    "aiobotocore>=2.7.0",
    "types-aiobotocore[secretsmanager]>=2.7.0",
    "certifi>=2023.7.22",
    "click>=8.1.7",
    "cryptography>=41.0.5",
    "fastapi>=0.103.2",
    "h11>=0.14.0",
    "httpcore>=0.18.0",
    "httpx>=0.25.0",
    "idna>=3.4",
    "jsonpath-ng>=1.7.0",
    "ply>=3.11",
    "pydantic>=2.4.2",
    "pydantic_core>=2.10.1",
    "sniffio>=1.3.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "PyJWT[crypto]>=2.8.0",
]

[project.optional-dependencies]
lambda = ["mangum>=0.17.0"]

[project.urls]
Homepage = "https://github.com/attuned-corp/guardette"
Issues = "https://github.com/attuned-corp/guardette/issues"

[tool.poetry]
packages = [{include = "guardette", from = "src"}]

[tool.poetry.group.dev.dependencies]
build = "*"
jinja2 = ">=3.1.2"
pytest = "*"
pre-commit = "*"
ruff = "*"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]

[tool.ruff.format]
quote-style = "double"
